@@ -19,12 +19,24 @@
     display: none;
 }
 
+#title {
+    font-weight: bold;
+}
+
+#selected {
+    padding: 5px;
+}
+
 #ofs-logo {
     height: 25px;
 }
 
 #ccby {
     height: 10px;
+}
+
+.ol-attribution a {
+    color: #333;
 }
 
 .pagination > .active > a,
@@ -34,6 +46,17 @@
 .pagination > .active > span:focus {
     background-color: rgba(254,51,51,0.7);
     border-color: rgba(254,51,51,0.7);
+}
+
+.pagination > li > a, .pagination > li > span {
+    color: #000;
+}
+
+.pagination > li > a:hover,
+.pagination > li > span:hover,
+.pagination > li > a:focus, 
+.pagination > li > span:focus {
+    color: #000
 }
 
 .ol-control button {
